2009-09-17  Jakub Jelinek  <jakub@redhat.com>

	* c-parser.c (c_parser_struct_or_union_specifier): Adjust
	DECL_SOURCE_LOCATION of TYPE_STUB_DECL.

2009-09-16  Jakub Jelinek  <jakub@redhat.com>

	* integrate.c (set_block_abstract_flags): Call
	set_decl_abstract_flags also on BLOCK_NONLOCALIZED_VARs.

2009-09-16  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2009-09-09  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/41101
	* tree-ssa-pre.c (maximal_set): Remove.
	(compute_antic_aux): Treat the maximal set as implicitly all ones.
	Defer all blocks we didn't visit at least one successor.
	(add_to_exp_gen): Do not add to the maximal set.
	(make_values_for_phi): Likewise.
	(compute_avail): Likewise.
	(init_pre): Do not allocate the maximal set.
	(execute_pre): Do not dump it.

2009-09-14  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/alpha.md (smaxsf3): Disable for IEEE mode.
	(sminsf3): Ditto.

2009-09-13  Kai Tietz  <kai.tietz@onevision.com>

	* config.gcc (i?86-*-mingw* and x86_64-*-mingw*): Set
	need_64bit_hwint for x64 case to yes.
	* config.host: Set for x64 mingw the option
	use_long_long_for_widest_fast_int to yes.

2009-09-12  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/install.texi (avr): Remove obsolete reference site.

2009-09-12  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/install.texi (Binaries): Adjust AIX link.

2009-09-11  Akim Demaille  <demaille@gostai.com>

	* doc/invoke.texi (-fstrict-aliasing): Correct two examples.
	Use an imperative sentence.

2009-09-14  Richard Henderson  <rth@redhat.com>
            Jakub Jelinek  <jakub@redhat.com>

	* builtins.c (expand_builtin_synchronize): Use gimple_build_asm_vec.
	* cfgbuild.c (make_edges): Handle asm goto.
	* cfglayout.c (fixup_reorder_chain): Likewise.
	* cfgrtl.c (patch_jump_insn): Likewise.
	* gimple-pretty-print.c (dump_gimple_asm): Likewise.
	* gimple.c (gimple_build_asm_1): Add and use nlabels parameter.
	(gimple_build_asm_vec): Add and use labels parameter.