@@ -1,3 +1,9 @@
+2009-09-23  Alan Modra  <amodra@bigpond.net.au>
+
+	PR target/40473
+	* config/rs6000/rs6000.c (rs6000_output_function_prologue): Don't
+	call final to emit non-scheduled prologue, instead insert at entry.
+
 2009-09-17  Jakub Jelinek  <jakub@redhat.com>
 
 	* c-parser.c (c_parser_struct_or_union_specifier): Adjust
